# atria_core

./: .gitignore  README.md  atria.code-workspace  pyproject.toml  run_tests.sh  test.py
scripts/: format.sh  lint.sh  test.sh
src/atria_core/: __init__.py  constants.py
src/atria_core/client/: atriax_client.py  config.py  keyring.py
src/atria_core/logger/: __init__.py  constants.py  filters.py  logger.py  utilities.py
src/atria_core/rest/: __init__.py  base.py  config_rest.py
src/atria_core/rest/data_instances/: document_instance_rest.py  image_instance_rest.py
src/atria_core/rest/dataset/: dataset_rest.py
src/atria_core/rest/model/: model_rest.py
src/atria_core/rest/tracking/: experiment_rest.py  metric_rest.py  param_rest.py  run_rest.py
src/atria_core/schemas/: agent.py  auth.py  base.py  config.py  dataset.py  experiment.py  metric.py  model.py  param.py  run.py  user_task.py  utils.py
src/atria_core/schemas/data_instances/: document_instance.py  image_instance.py
src/atria_core/transforms/: __init__.py  base.py
src/atria_core/types/: __init__.py  common.py  enums.py  factory.py  tasks.py
src/atria_core/types/base/: data_model.py  types.py
src/atria_core/types/base/_mixins/: _batchable.py  _file_path_convertible.py  _loadable.py  _raw_convertible.py  _repeatable.py  _table_serializable.py  _tensor_convertible.py  _to_device_convertible.py  _utils.py
src/atria_core/types/data_instance/: base.py  document.py  document_instance.py  image.py  image_instance.py  tokenized_document_instance.py  tokenized_object.py
src/atria_core/types/data_instance/_raw/: base.py  document_instance.py  image_instance.py
src/atria_core/types/data_instance/_tensor/: base.py  document_instance.py  image_instance.py  tokenized_document_instance.py  tokenized_instance.py
src/atria_core/types/datasets/: config.py  metadata.py  splits.py
src/atria_core/types/generic/: annotated_object.py  bounding_box.py  ground_truth.py  image.py  label.py  ocr.py  question_answer_pair.py
src/atria_core/types/generic/_raw/: annotated_object.py  bounding_box.py  ground_truth.py  image.py  label.py  ocr.py  question_answer_pair.py
src/atria_core/types/generic/_tensor/: annotated_object.py  bounding_box.py  ground_truth.py  image.py  label.py  ocr.py  question_answer_pair.py
src/atria_core/types/model_outputs/: outputs.py
src/atria_core/types/ocr_parsers/: hocr_graph_parser.py  hocr_parser.py
src/atria_core/types/tensor_types/: __init__.py
src/atria_core/types/typing/: common.py  image.py  imports.py  tensor.py  torch.py
src/atria_core/utilities/: auto_config.py  common.py  encoding.py  file.py  imports.py  pydantic.py  repr.py  strings.py  tensors.py  yaml_resolvers.py
test_scripts/: test.py
tests/: utilities.py
tests/logger/: test_distributed_filter.py  test_handlers.py  test_logging.py
tests/types/: conftest.py  data_model_test_base.py  factory.py  test_imports.py  tests_base.py
tests/types/data_instances/: test_document_instance.py  test_image_instance.py  test_tokenized_document_instance.py  test_tokenized_object_instance.py
tests/types/generics/: test_annotated_object.py  test_bounding_box.py  test_example.py  test_ground_truth.py  test_image.py  test_label.py  test_mock_data_models.py  test_ocr.py  test_qa.py  test_question_answer_pair.py
tests/utilities/: common.py  mock_data_models.py  test_tensors.py
